feat: added get many paged of transaction types
